<resources>
    <string name="app_name">MobiMarket</string>
    <string name="mobi_market">MOBI MARKET</string>
    <string name="user_name">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль</string>
    <string name="enter">Войти</string>
    <string name="registrate">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="email">Почта</string>
    <string name="next">Далее</string>
    <string name="make_password">Придумайте пароль</string>
    <string name="password_info_text">Минимальная длина — 8символов.\nДля надежности пароль должен\nсодержать буквы и цифры.</string>
    <string name="write_again_password">Повторите пароль</string>
    <string name="ready">Готово</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="create">Create</string>
    <string name="profile">Профиль</string>
    <string name="change">Изменить</string>
    <string name="favourites">Понравившиеся</string>
    <string name="my_products">Мои товары</string>
    <string name="logout">Выйти</string>
    <string name="finish_registration">Закончить регистрацию</string>
    <string name="plogout_dialog_text">Вы действительно хотите выйти\nс аккаунта?</string>
    <string name="cancel">Отмена</string>
    <string name="choose_image">Выбрать фотографию</string>
    <string name="name">Имя</string>
    <string name="username">Имя пользователя</string>
    <string name="surname">Фамилия</string>
    <string name="birth_date">гггг-мм-дд</string>
    <string name="add_number">Добавить номер</string>
    <string name="default_number">0(000) 000 000</string>
    <string name="write_phone_number">Введите номер телефона</string>
    <string name="write_number_info_text">Мы отправим вам СМС с кодом подтверждения</string>
    <string name="write_code_sms">Введите код из СМС</string>
    <string name="re_request_code">Повторный запрос</string>
    <string name="send_code_again">Отправить код еще раз</string>
    <string name="change_phoneNumber">Изменить номер телефона</string>
    <string name="error_code">Неверный код</string>
    <string name="new_password">Новый пароль</string>
    <string name="invite_new_password">Придумайте пароль</string>
    <string name="again_password">Повторите пароль</string>
    <string name="password_new">Сброс пароля</string>
    <string name="password_error">Пароли не совпадают</string>
    <string name="all_products">Все продукты</string>
    <string name="ow_empty">Ой пусто</string>
</resources>