<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="30dp">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/image_dialog_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_500"
        android:gravity="center"
        android:text="@string/plogout_dialog_text"
        android:textColor="@color/dark_black"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout_positive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/maine_blue"
        android:fontFamily="@font/inter_700"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/btn_negative_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_700"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/cancel"
        android:textColor="@color/dark_black"
        android:textSize="16sp" />

</LinearLayout>