<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/main_text_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/inter_700"
        android:gravity="center"
        android:text="@string/new_password"
        android:textColor="@color/light_black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/phone_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_password_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_text_code" />

    <TextView
        android:id="@+id/write_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_500"
        android:gravity="center"
        android:text="@string/invite_new_password"
        android:textColor="@color/light_black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_image" />


    <TextView
        android:id="@+id/password_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_400"
        android:gravity="center"
        android:text="@string/password_info_text"
        android:textColor="@color/light_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/write_number" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxBackgroundMode="filled"
        app:layout_constraintTop_toBottomOf="@id/password_info">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_400"
            android:hint="@string/password"
            android:inputType="text"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundMode="filled"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/maine_blue"
        app:layout_constraintTop_toBottomOf="@id/password_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_400"
            android:hint="@string/again_password"
            android:inputType="text"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_password_input"
        android:text="@string/password_error"
        android:textSize="16sp"
        android:visibility="gone"
        android:fontFamily="@font/inter_500"
        android:textColor="@color/main_red"
        android:layout_marginTop="15dp"
        android:gravity="center"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:backgroundTint="@color/maine_blue"
        android:fontFamily="@font/inter_700"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_input"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/maine_blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>