<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">


    <ImageButton
        android:id="@+id/ic_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/arrow_back_bg"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_700"
        android:text="@string/registration"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_password"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="45dp"
        android:elevation="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_password_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_registration" />

    <TextView
        android:id="@+id/tv_make_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_500"
        android:gravity="center"
        android:text="@string/make_password"
        android:textColor="@color/light_black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/ic_password" />

    <TextView
        android:id="@+id/tv_password_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_400"
        android:gravity="center"
        android:text="@string/password_info_text"
        android:textColor="@color/light_grey"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_make_password" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxBackgroundMode="filled"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/maine_blue"
        app:layout_constraintTop_toBottomOf="@id/tv_password_info">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_400"
            android:hint="@string/password"
            android:inputType="text"
            android:textColorHint="@color/light_grey"

            android:textSize="16sp"
            app:endIconMode="password_toggle" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundMode="filled"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/maine_blue"
        app:layout_constraintTop_toBottomOf="@id/main_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_400"
            android:hint="@string/write_again_password"
            android:inputType="text"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_fully"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/light_grey"
        android:fontFamily="@font/inter_500"
        android:text="@string/ready"
        android:enabled="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_input" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/maine_blue"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>