<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageButton
        android:id="@+id/ic_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/arrow_back_bg"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_700"
        android:text="@string/registration"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_mobi_market"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_app_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_registration" />

    <TextView
        android:id="@+id/tv_mobi_market"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_800"
        android:gravity="center"
        android:text="@string/mobi_market"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/ic_mobi_market" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxBackgroundMode="filled"
        app:layout_constraintTop_toBottomOf="@id/tv_mobi_market">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_400"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundMode="filled"
        app:endIconTint="@color/maine_blue"
        app:layout_constraintTop_toBottomOf="@id/user_name_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_400"
            android:hint="@string/email"
            android:inputType="text"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundMode="filled"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/maine_blue"
        app:layout_constraintTop_toBottomOf="@id/email_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_400"
            android:hint="@string/password"
            android:inputType="text"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundMode="filled"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/maine_blue"
        app:layout_constraintTop_toBottomOf="@id/password_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_400"
            android:hint="@string/write_again_password"
            android:inputType="text"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/light_grey"
        android:fontFamily="@font/inter_500"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_input" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/maine_blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>